AppointmentService Tests passing